--- a/extended-vnft/Cargo.toml
+++ b/extended-vnft/Cargo.toml
@@ -31,4 +31,4 @@ syn = "2.0"
 thiserror = "1.0"
 tokio = "1.36"
 trybuild = "1"
-vft-service = { path = "../vft-service" }
+vnft-service = { path = "../vnft-service" }
