--- a/extended-vnft/app/Cargo.toml
+++ b/extended-vnft/app/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "extended-vft-app"
+name = "extended-vnft-app"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -10,14 +10,14 @@ log.workspace = true
 sails-rs = { workspace = true, features = ["gtest"] }
 parity-scale-codec.workspace = true
 scale-info.workspace = true
-vft-service.workspace = true
+vnft-service.workspace = true
 
 [dev-dependencies]
 env_logger.workspace = true
 gclient.workspace = true
 gtest.workspace = true
 gear-core.workspace = true
-extended_vft_wasm = { path = "../wasm" }
+extended_vnft_wasm = { path = "../wasm" }
 tokio = "1"
 
 [build-dependencies]
