standards updated from oficial repository

--- a/extended-vmt/Cargo.toml
+++ b/extended-vmt/Cargo.toml
@@ -31,4 +31,5 @@ syn = "2.0"
 thiserror = "1.0"
 tokio = "1.36"
 trybuild = "1"
-vnft-service = { git = "https://github.com/Vara-Lab/standards" }
+vmt-service = { path = "https://github.com/Vara-Lab/standards" }
+# vmt-service = { git = "https://github.com/gear-foundation/standards" }
