--- a/extended-vmt/app/Cargo.toml
+++ b/extended-vmt/app/Cargo.toml
@@ -17,7 +17,7 @@ env_logger.workspace = true
 gclient.workspace = true
 gtest.workspace = true
 gear-core.workspace = true
-extended_vmt_wasm = { path = "../wasm" }
+# extended_vmt_wasm = { path = "../wasm" }
 tokio = "1"
 
 [build-dependencies]
