updated contracts to work with standard services using its links on github

--- a/extended-vmt/app/Cargo.toml
+++ b/extended-vmt/app/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 sails-rs = "=0.7.0"
 gstd = "=1.7.0"
-vmt-service = { path = "../../vmt-service" }
+vmt-service = { git = "https://github.com/Vara-Lab/standards" }
