--- a/extended-vnft/app/Cargo.toml
+++ b/extended-vnft/app/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 sails-rs = "=0.7.0"
 gstd = "=1.7.0"
-vnft-service = { path = "../../vnft-service" }
+vnft-service = { git = "https://github.com/Vara-Lab/standards" }
