--- a/vnft-service/Cargo.toml
+++ b/vnft-service/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 gstd = "=1.7.1"
 log = "*"
 sails-rs = "=0.7.3"
-# scale-info = { version = "2", default-features = false }
-# parity-scale-codec = { version = "3", default-features = false }
+scale-info = { version = "2", default-features = false }
+parity-scale-codec = { version = "3", default-features = false }
 
 [dev-dependencies]
 env_logger = "*"
