--- a/extended-vmt/app/Cargo.toml
+++ b/extended-vmt/app/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sails-rs.workspace = true
-gstd.workspace = true
-vmt-service = { path = "../../vmt-service" }
+sails-rs = "=0.8"
+gstd = "=1.8"
+vmt-service = { git = "https://github.com/Vara-Lab/standards" }
