--- a/extended-vmt/client/Cargo.toml
+++ b/extended-vmt/client/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 
 [dependencies]
 mockall = { version = "0.12", optional = true }
-sails-rs.workspace = true
+sails-rs = "=0.8"
 
 [build-dependencies]
 extended-vmt-app = { path = "../app" }
-sails-client-gen.workspace = true
-sails-idl-gen.workspace = true
+sails-client-gen = "=0.8"
+sails-idl-gen = "=0.8"
 
 [features]
 mocks = ["sails-rs/mockall", "dep:mockall"]
