--- a/extended-vnft/Cargo.toml
+++ b/extended-vnft/Cargo.toml
@@ -2,24 +2,24 @@
 name = "extended-vnft"
 version = "1.1.0"
 license = "MIT"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 extended-vnft-app = { path = "app" }
 
 [build-dependencies]
 extended-vnft-app = { path = "app" }
-sails-rs = { version = "=0.8", features = ["wasm-builder"] }
-sails-idl-gen = "=0.8"
-sails-client-gen = "=0.8"
+sails-rs = { version = "0.9.0", features = ["wasm-builder"] }
+sails-idl-gen = "0.9.0"
+sails-client-gen = "0.9.0"
 
 [dev-dependencies]
 extended-vnft = { path = ".", features = ["wasm-binary"] }
 extended-vnft-client = { path = "client" }
-sails-rs = { version = "=0.8", features = ["gtest"] }
+sails-rs = { version = "0.9.0", features = ["gtest"] }
 tokio = { version = "1.41", features = ["rt", "macros"] }
-gclient = "=1.8"
-gear-core = "=1.8"
+gclient = "1.9.0"
+gear-core = "1.9.0"
 
 [features]
 wasm-binary = []
