--- a/extended-vnft/Cargo.toml
+++ b/extended-vnft/Cargo.toml
@@ -4,7 +4,8 @@ version = "1.1.0"
 license = "MIT"
 edition = "2024"
 
-[dependencies]
+# [dependencies]
+[target.'cfg(target_arch = "wasm32")'.dependencies]
 extended-vnft-app = { path = "app" }
 
 [build-dependencies]
