--- a/extended-vnft/app/Cargo.toml
+++ b/extended-vnft/app/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2024"
 
 [dependencies]
 sails-rs = "0.9.0"
+gstd = "1.9.0"
 vnft-service = { git = "https://github.com/Vara-Lab/standards" }
