--- a/vft-service/Cargo.toml
+++ b/vft-service/Cargo.toml
@@ -5,11 +5,9 @@ license = "MIT"
 edition = "2021"
 
 [dependencies]
-gstd = "=1.8.0"
+gstd = "1.9.0"
 log = "*"
-sails-rs = "=0.8.0"
-parity-scale-codec = { version = "3", default-features = false }
-scale-info = { version = "2", default-features = false }
+sails-rs = "0.9.0"
 
 [dev-dependencies]
 env_logger = "*"
