--- a/extended-vft/app/Cargo.toml
+++ b/extended-vft/app/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "extended-vft-app"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
-sails-rs = "=0.8"
-gstd = "1.8"
+sails-rs = "0.9.0"
+gstd = "1.9.0"
 vft-service = { git = "https://github.com/Vara-Lab/standards" }
