--- a/vft-service/Cargo.toml
+++ b/vft-service/Cargo.toml
@@ -2,12 +2,12 @@
 name = "vft-service"
 version = "1.1.0"
 license = "MIT"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
-gstd = "1.9.0"
+gstd = "=1.9.0"
 log = "*"
-sails-rs = "0.9.0"
+sails-rs = "=0.9.0"
 
 [dev-dependencies]
 env_logger = "*"
