reverted all changed

--- a/extended-vft/Cargo.toml
+++ b/extended-vft/Cargo.toml
@@ -2,24 +2,23 @@
 name = "extended-vft"
 version = "1.1.0"
 license = "MIT"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 extended-vft-app = { path = "app" }
 
 [build-dependencies]
 extended-vft-app = { path = "app" }
-sails-rs = { version = "0.9.0", features = ["wasm-builder"] }
-sails-idl-gen = "0.9.0"
-sails-client-gen = "0.9.0"
+sails-rs = { version = "=0.8.1", features = ["wasm-builder"] }
+sails-idl-gen = "=0.8.1"
 
 [dev-dependencies]
 extended-vft = { path = ".", features = ["wasm-binary"] }
 extended-vft-client = { path = "client" }
-sails-rs = { version = "0.9.0", features = ["gtest"] }
+sails-rs = { version = "=0.8.1", features = ["gtest"] }
 tokio = { version = "1.41", features = ["rt", "macros"] }
-gclient = "1.9.0"
-gear-core = "1.9.0"
+gclient = "=1.8.1"
+gear-core = "=1.8.1"
 
 [features]
 wasm-binary = []
