--- a/extended-vft/app/Cargo.toml
+++ b/extended-vft/app/Cargo.toml
@@ -1,15 +1,9 @@
 [package]
 name = "extended-vft-app"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
-<<<<<<< HEAD
-sails-rs = "0.9.0"
-gstd = "1.9.0"
+sails-rs = "=0.8.1"
+gstd = "=0.8.1"
 vft-service = { git = "https://github.com/Vara-Lab/standards" }
-=======
-sails-rs.workspace = true
-gstd.workspace = true
-vft-service = { path = "../../vft-service" }
->>>>>>> parent of 7e43649 (Changed all extended standards Cargo.toml)
