--- a/extended-vft/client/Cargo.toml
+++ b/extended-vft/client/Cargo.toml
@@ -1,25 +1,16 @@
 [package]
 name = "extended-vft-client"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 mockall = { version = "0.12", optional = true }
-<<<<<<< HEAD
-sails-rs = "0.9.0"
+sails-rs = "=0.8.1"
 
 [build-dependencies]
 extended-vft-app = { path = "../app" }
-sails-client-gen = "0.9.0"
-sails-idl-gen = "0.9.0"
-=======
-sails-rs.workspace = true
-
-[build-dependencies]
-extended-vft-app = { path = "../app" }
-sails-client-gen.workspace = true
-sails-idl-gen.workspace = true
->>>>>>> parent of 7e43649 (Changed all extended standards Cargo.toml)
+sails-client-gen = "=0.8.1"
+sails-idl-gen = "=0.8.1"
 
 [features]
 mocks = ["sails-rs/mockall", "dep:mockall"]
