--- a/extended-vnft/app/Cargo.toml
+++ b/extended-vnft/app/Cargo.toml
@@ -1,15 +1,9 @@
 [package]
 name = "extended-vnft-app"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
-<<<<<<< HEAD
-sails-rs = "0.9.0"
-gstd = "1.9.0"
+sails-rs = "=0.8.1" 
+gstd = "=1.8.1" 
 vnft-service = { git = "https://github.com/Vara-Lab/standards" }
-=======
-sails-rs.workspace = true
-gstd.workspace = true
-vnft-service = { path = "../../vnft-service" }
->>>>>>> parent of 7e43649 (Changed all extended standards Cargo.toml)
