--- a/extended-vft/Cargo.toml
+++ b/extended-vft/Cargo.toml
@@ -11,6 +11,7 @@ extended-vft-app = { path = "app" }
 extended-vft-app = { path = "app" }
 sails-rs = { version = "=0.8.1", features = ["wasm-builder"] }
 sails-idl-gen = "=0.8.1"
+sails-client-gen = "=0.8.1"
 
 [dev-dependencies]
 extended-vft = { path = ".", features = ["wasm-binary"] }
