--- a/extended-vmt/Cargo.toml
+++ b/extended-vmt/Cargo.toml
@@ -11,6 +11,7 @@ extended-vmt-app = { path = "app" }
 extended-vmt-app = { path = "app" }
 sails-rs = { version = "=0.8.1", features = ["wasm-builder"] }
 sails-idl-gen = "=0.8.1"
+sails-client-gen = "=0.8.1"
 
 [dev-dependencies]
 extended-vmt = { path = ".", features = ["wasm-binary"] }
