--- a/extended-vmt/Cargo.toml
+++ b/extended-vmt/Cargo.toml
@@ -9,17 +9,17 @@ extended-vmt-app = { path = "app" }
 
 [build-dependencies]
 extended-vmt-app = { path = "app" }
-sails-rs = { version = "=0.8.1", features = ["wasm-builder"] }
-sails-idl-gen = "=0.8.1"
-sails-client-gen = "=0.8.1"
+sails-rs = { version = "0.9.1", features = ["wasm-builder"] }
+sails-idl-gen = "0.9.1"
+sails-client-gen = "0.9.1"
 
 [dev-dependencies]
 extended-vmt = { path = ".", features = ["wasm-binary"] }
 extended-vmt-client = { path = "client" }
-sails-rs = { version = "=0.8.1", features = ["gtest"] }
+sails-rs = { version = "0.9.1", features = ["gtest"] }
 tokio = { version = "1.41", features = ["rt", "macros"] }
-gclient = "=1.8.1"
-gear-core = "=1.8.1"
+gclient = "1.9.1"
+gear-core = "1.9.1"
 
 [features]
 wasm-binary = []
