--- a/vnft-service/Cargo.toml
+++ b/vnft-service/Cargo.toml
@@ -5,9 +5,9 @@ license = "MIT"
 edition = "2021"
 
 [dependencies]
-gstd = "=1.8.1"
+gstd = "1.9.1"
 log = "*"
-sails-rs = "=0.8.1"
+sails-rs = "0.9.1"
 
 [dev-dependencies]
 env_logger = "*"
